# rl-chess

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  build_moves_set.py  pyproject.toml
data/: .gitignore  fen_validation_dataset.csv
rl_chess/: __init__.py  main.py
rl_chess/config/: config.py  default.toml
rl_chess/evaluation/: stockfish_evaluator.py
rl_chess/inference/: inference.py
rl_chess/interface/: game_interface.py
rl_chess/modeling/: chess_cnn.py  chess_cnn_transformer.py  chess_ensemble.py  chess_transformer.py  experience_buffer.py  inference.py  optim.py  pretrain_model.py  train.py  train_cnn.py  train_deepq.py  utils.py
scripts/: build_fen_dataset.py  create_artificial_buffer.py  run_minimax_eval.py  run_move_eval.py  run_stockfish_eval.py
tests/: test_batch_separation.py
