[tool.poetry]
name = "rl-chess"
version = "0.1.0"
description = ""
authors = ["John McCain <johnm.freestate@gmail.com>"]
readme = "README.md"
packages = [
    { include = "rl_chess", from = "." },
]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"
chess = "^1.10.0"
torch = "^2.4.0"
pygame = "^2.6.0"
pydantic = "^2.8.2"
dynaconf = "^3.2.6"
numpy = "<2"
torch-optimizer = "^0.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
black = "^24.4.2"
mypy = "^1.11.0"
pre-commit = "^3.7.1"
isort = "^5.13.2"
gitignore-parser = "^0.1.11"
tensorboard = "^2.17.0"
torch-tb-profiler = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
