[tool.poetry]
name = "rl-chess"
version = "0.1.0"
description = ""
authors = ["John McCain <johnm.freestate@gmail.com>"]
readme = "README.md"
packages = [
    { include = "rl_chess", from = "." },
]

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"
chess = "^1.10.0"
pygame = "^2.6.0"
pydantic = "^2.8.2"
dynaconf = "^3.2.6"
numpy = "<2"
torch-optimizer = "^0.3.0"
pygame-widgets = "^1.1.5"
stockfish = "^3.28.0"
tqdm = "^4.66.5"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
torch = [
    {version = "2.3.1", platform = "darwin"},  # 2.3.1 because poetry doesn't respect platform for some reason...
    {version = "^2.4.0+cu118", platform = "linux", source = "pytorch-gpu-src"},
    {version = "^2.4.0+cu118", platform="win32", source = "pytorch-gpu-src"},
]


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
black = "^24.4.2"
mypy = "^1.11.0"
pre-commit = "^3.7.1"
isort = "^5.13.2"
gitignore-parser = "^0.1.11"
tensorboard = "^2.17.0"
torch-tb-profiler = "^0.4.3"
pandas = "^2.2.2"
pylance = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
